# djwavfixer

./: Cargo.toml  LICENSE.MIT  deny.toml
.github/workflows/: build.yml  lite-checks.yml
resources/cli_results/: cmp.py  recursive_output.txt  single_dir_output.txt  single_file_output.txt
src/: lib.rs
src/errors/: mod.rs
src/file_fixer/: blocking_fixer.rs  mod.rs
src/file_loader/: blocking_loader.rs  mod.rs
src/riff_parser/: mod.rs  riff_chunk.rs  riff_file.rs  riff_subchunk.rs
src/wav_file/: mod.rs  wav_format.rs
src/wav_format/: mod.rs
